# myna

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
gui/: MainFrame.xrc  MetadataDialog.xrc  myna.desktop
include/: Icon.h  MainFrame.h  MetadataDialog.h  myna.h
locale/ru/: ru.mo  ru.po
src/: MainFrame.cpp  MetadataDialog.cpp  myna.cpp
